<resources>
    <string name="app_name">RunImprove</string>
    <string name="rutinas">Rutinas</string>
    <string name="sprints">Sprints</string>
    <string name="tecnica">Técnica</string>
    <string name="resistencia">Resistencia</string>
    <string name="bajadas">Bajadas</string>
    <string name="hit">Hit</string>
    <string name="historial_de_entrenamientos">Historial de Entrenamientos</string>
    <string name="entrenar">Entrenar</string>
    <string name="estirar">Estirar</string>
    <string name="messageWithLink"><a href="https://www.google.com/">Help</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jumping_jacks">Jumping Jacks</string>
    <string name="guardar">Guardar</string>
    <string name="porcentaje">Porcentaje</string>
    <string name="fecha">Fecha</string>
    <string name="tipo">Tipo</string>
    <string name="borrar_entreno">¿Quiere borrar el entreno?</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar">Eliminar</string>
    <string name="calentamiento">Calentamiento</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="historial_de">Historial de</string>
    <string name="entrenamientos">Entrenamientos</string>
    <string name="sesion_de_estiramientos">Sesión de Estiramientos</string>
    <string name="entrenamiento_de_hit">Entrenamiento de Hit</string>
    <string name="entrenamiento_de_sprints">Entrenamiento de Sprints</string>
    <string name="entrenamiento_de_resistencia">Entrenamiento de Resistencia</string>
    <string name="entrenamiento_de_tecnica">Entrenamiento de Técnica</string>
    <string name="entrenamiento_de_bajadas">Entrenamiento de Bajadas</string>
    <string name="estiramientos">Estiramientos</string>
    <string name="borrado_exito">Borrado con exito.</string>
    <string name="error_borrar">Error al borrar</string>
    <string name="delete_all_entrenos">Se han borrado todos los entrenos con exito</string>
    <string name="marcar_serie">Debes marcar alguna serie</string>
    <string name="guardar_exito">Guardado con exito.</string>
    <string name="error_guardar">Failed to save.</string>
    <string name="tipo_subrayado"><u>Tipo</u></string>
    <string name="porcentaje_subrayado"><u>Porcentaje</u></string>
    <string name="fecha_subrayado"><u>Fecha</u></string>
    <string name="grafica">Gráfica</string>
    <string name="porcentaje_grafica">Porcentaje por tipos de Entreno</string>
    <string name="descenso_tecnico">Descenso técnico</string>
    <string name="descenso_agresivo">Descenso agresivo</string>
    <string name="estirar_piramidal">Estirar Piramidal</string>
    <string name="estirar_isquiotibial">Estirar Isquiotibial</string>
    <string name="estirar_espalda">Estirar Espalda</string>
    <string name="subidas_1km">Subidas 1km</string>
    <string name="impulsiones">Impulsiones</string>
    <string name="skipping_doble">Skipping doble</string>
    <string name="acabado">Muy bien, has acabado!!</string>
    <string name="quieres_parar_alarma">¿Quieres borrar la alarma?</string>
    <string name="parar_alarma">Parar Alarma</string>
</resources>