<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Historial de"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textColor="#553908" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Entrenamientos"
            android:textSize="40sp"
            android:gravity="center"
            android:textColor="#553908" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:text="@string/tipo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:paddingHorizontal="12dp"
                android:text="@string/porcentaje"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:text="@string/fecha"/>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewEntrenos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            tools:listitem="@layout/item_entreno">
        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>
    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/menu_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:backgroundTint="@color/verde_tema"
        app:fab_addButtonColorNormal="#689F38"
        app:fab_labelStyle="@color/color_titulos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnGrafica2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FB8C00"
            app:fab_colorPressed="#DD2C00"
            app:fab_icon="@drawable/ic_stop_alarm"
            app:fab_labelStyle="@color/color_titulos"
            app:backgroundTint="@color/white"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnGrafica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#00BCD4"
            app:fab_colorPressed="#DD2C00"
            app:fab_icon="@drawable/ic_pause"
            app:backgroundTint="@color/white"
            />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</androidx.constraintlayout.widget.ConstraintLayout>